<resources>
    <string name="app_name">EveryStepCounts2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="register">Register</string>
    <string name="every_step_counts">Every Step Counts</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_have_a_account">Dont have a Account?</string>
    <string name="title_activity_dashboard2">Dashboard2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_challenge">Challenge</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_notification_channel_id" translatable="false">"follow"</string>
    <string name="direct_message">direct_message</string>
    <string name="data_type">data_type</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
</resources>
